# algo-ats

./: .gitignore  alpaca_executor_base.py  alpaca_paper_trading_executor.py  daily_run.py  dashboard.py  data_downloader.py  data_fundamentals.py  data_ohlcv.py  data_wsb.py  fill_gaps.py  gap_detection.py  hourly_run.py  live_client.py  live_config.py  live_feed.py  main.py  pyproject.toml  strategy_base.py  strategy_cross_sectional_momentum.py  strategy_ma_cross.py  strategy_runner.py  strategy_types.py  strategy_utils.py  utils.py  wsb2.py
execution/: alpaca_base.py  alpaca_paper.py
extraction/: fundamentals.py  metadata.py  ohlcv_massive.py  wsb.py
live/: client.py  config.py  moomoo_l2.py  moomoo_l2_feed.py
strategy/: base.py  cross_sectional_momentum.py  ma_cross.py  types.py  utils.py
