[project]
name = "ats-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datetime>=6.0",
    "nbformat>=4.2.0",
    "pandas>=2.3.3",
    "pandas-market-calendars>=5.3.2",
    "playwright>=1.59.0",
    "praw>=7.8.1",
    "prawcore>=2.4.0",
    "pytrends>=4.9.2",
    "tradingview-screener>=3.2.0",
    "vadersentiment>=3.3.2",
    "vectorbtpro[base]",
    "yfinance>=1.3.0",
]

[tool.uv.sources]
vectorbtpro = { git = "https://github.com/polakowo/vectorbt.pro.git", rev = "v2026.4.7" }
